@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: expr.test,v 1.11 2005/10/27 20:43:21 mdejong Exp $
+# RCS: @(#) $Id: expr.test,v 1.12 2005/11/16 20:39:30 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -296,6 +296,34 @@ test expr-7.20 {CompileBitAndExpr: error in equality expr} {
     catch {expr xne3} msg
    set msg
 } {syntax error in expression "xne3"}
+test expr-7.21 {CompileBitAndExpr: equality expr} {
+    expr {"7.91e+16" eq 7.91e+016}
+} 0
+test expr-7.22 {CompileBitAndExpr: equality expr} {
+    expr {"7.91e+016" eq 7.91e+016}
+} 1
+test expr-7.23 {CompileBitAndExpr: equality expr} {
+    # This test could fail if the string rep generated
+    # for the parsed expr value is not the same as
+    # the string rep of the value variable. Uncommenting
+    # the puts statement that prints the parsed variable
+    # hides the bug since a string rep is generated
+    # before entering the expr module.
+    set value "7.91e+016"
+    set parsed [expr {7.91e+016}]
+    #puts "value  is \"$value\""
+    #puts "parsed is \"$parsed\""
+    expr {$parsed eq $value}
+} 1
+proc test_expr_eq { value } {
+    set parsed [expr {$value}]
+    # puts "parsed is \"$parsed\""
+    expr {$parsed eq $value}
+}
+test expr-7.24 {CompileBitAndExpr: equality expr} {
+    test_expr_eq "7.91e+016"
+} 1
+
 
 test expr-8.1 {CompileEqualityExpr: just relational expr} {expr 3>=2} 1
 test expr-8.2 {CompileEqualityExpr: just relational expr} {expr 2<=2.1} 1
